@@ -1,3 +1,8 @@
+Wed Nov 24 16:24:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mkconfig.rb (patchlevel): config.status may not contain
+	  PATCHLEVEL even if other version numbers exist.
+
 Wed Nov 24 16:18:02 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* win32/Makefile.sub ($(RCFILES)): no revision.h in this
